修改蜗牛读书
修改蜗牛读书

--- a/woniudushu/说明.html
+++ b/woniudushu/说明.html
@@ -52,7 +52,7 @@
       <div id="u3" class="ax_default label">
         <div id="u3_div" class=""></div>
         <div id="u3_text" class="text ">
-          <p><span>最后，请根据左侧目录导航阅读。</span></p>
+          <p><span>本文对 “ 蜗牛读书 ” APP 进行逐项拆解，分析还原其设计思路。</span></p><p><span>最后，请根据左侧目录导航阅读。</span></p>
         </div>
       </div>
     </div>
