--- a/GooglePlay/编辑精选.html
+++ b/GooglePlay/编辑精选.html
@@ -324,6 +324,14 @@
       <div id="u495" class="ax_default box_1">
         <div id="u495_div" class=""></div>
       </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u496" class="ax_default label">
+        <div id="u496_div" class=""></div>
+        <div id="u496_text" class="text ">
+          <p><span>精选就像一个榜单</span></p><p><span>设置了若干主题，根据分类或者其他</span></p><p><span>定期根据分类内的应用质量等情况来选择推荐</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
