--- a/GooglePlay/首页.html
+++ b/GooglePlay/首页.html
@@ -580,6 +580,14 @@
       <div id="u85" class="ax_default box_1">
         <div id="u85_div" class=""></div>
       </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u86" class="ax_default label">
+        <div id="u86_div" class=""></div>
+        <div id="u86_text" class="text ">
+          <p><span>问题：UI不一致</span></p><p><span>内容模块有些是圆角</span></p><p><span>有些是直角</span></p><p><span>此处圆角</span></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
