--- a/GooglePlay/编辑精选.html
+++ b/GooglePlay/编辑精选.html
@@ -25,311 +25,319 @@
     <div id="base" class="">
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u440" class="ax_default box_2">
-        <div id="u440_div" class=""></div>
+      <div id="u441" class="ax_default box_2">
+        <div id="u441_div" class=""></div>
       </div>
 
       <!-- Unnamed (Group) -->
-      <div id="u441" class="ax_default" data-left="31" data-top="317" data-width="306" data-height="288">
+      <div id="u442" class="ax_default" data-left="31" data-top="317" data-width="306" data-height="288">
 
         <!-- Unnamed (Rectangle) -->
-        <div id="u442" class="ax_default box_2">
-          <div id="u442_div" class=""></div>
+        <div id="u443" class="ax_default box_2">
+          <div id="u443_div" class=""></div>
         </div>
 
         <!-- Unnamed (Placeholder) -->
-        <div id="u443" class="ax_default placeholder">
-          <img id="u443_img" class="img " src="images/编辑精选/u443.png"/>
-        </div>
-
-        <!-- Unnamed (Horizontal Line) -->
-        <div id="u444" class="ax_default line">
+        <div id="u444" class="ax_default placeholder">
           <img id="u444_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
-        <!-- Unnamed (Rectangle) -->
-        <div id="u445" class="ax_default label">
-          <div id="u445_div" class=""></div>
-          <div id="u445_text" class="text ">
-            <p><span>编辑精选应用</span></p>
-          </div>
+        <!-- Unnamed (Horizontal Line) -->
+        <div id="u445" class="ax_default line">
+          <img id="u445_img" class="img " src="images/编辑精选/u445.png"/>
         </div>
 
         <!-- Unnamed (Rectangle) -->
         <div id="u446" class="ax_default label">
           <div id="u446_div" class=""></div>
           <div id="u446_text" class="text ">
+            <p><span>编辑精选应用</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Rectangle) -->
+        <div id="u447" class="ax_default label">
+          <div id="u447_div" class=""></div>
+          <div id="u447_text" class="text ">
             <p><span>推荐主题的标题</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Image) -->
-        <div id="u447" class="ax_default image">
-          <img id="u447_img" class="img " src="images/编辑精选/u447.png"/>
-        </div>
-
-        <!-- Unnamed (Placeholder) -->
-        <div id="u448" class="ax_default placeholder">
-          <img id="u448_img" class="img " src="images/编辑精选/u443.png"/>
+        <div id="u448" class="ax_default image">
+          <img id="u448_img" class="img " src="images/编辑精选/u448.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u449" class="ax_default placeholder">
-          <img id="u449_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u449_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u450" class="ax_default placeholder">
-          <img id="u450_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u450_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u451" class="ax_default placeholder">
-          <img id="u451_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u451_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u452" class="ax_default placeholder">
-          <img id="u452_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u452_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
-        <!-- Unnamed (Horizontal Line) -->
-        <div id="u453" class="ax_default line">
+        <!-- Unnamed (Placeholder) -->
+        <div id="u453" class="ax_default placeholder">
           <img id="u453_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
+        <!-- Unnamed (Horizontal Line) -->
+        <div id="u454" class="ax_default line">
+          <img id="u454_img" class="img " src="images/编辑精选/u445.png"/>
+        </div>
+
         <!-- Unnamed (Rectangle) -->
-        <div id="u454" class="ax_default label">
-          <div id="u454_div" class=""></div>
-          <div id="u454_text" class="text ">
+        <div id="u455" class="ax_default label">
+          <div id="u455_div" class=""></div>
+          <div id="u455_text" class="text ">
             <p><span>推荐主题的标题</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Image) -->
-        <div id="u455" class="ax_default image">
-          <img id="u455_img" class="img " src="images/编辑精选/u447.png"/>
-        </div>
-
-        <!-- Unnamed (Placeholder) -->
-        <div id="u456" class="ax_default placeholder">
-          <img id="u456_img" class="img " src="images/编辑精选/u443.png"/>
+        <div id="u456" class="ax_default image">
+          <img id="u456_img" class="img " src="images/编辑精选/u448.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u457" class="ax_default placeholder">
-          <img id="u457_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u457_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u458" class="ax_default placeholder">
-          <img id="u458_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u458_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u459" class="ax_default placeholder">
-          <img id="u459_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u459_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u460" class="ax_default placeholder">
-          <img id="u460_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u460_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
-        <!-- Unnamed (Horizontal Line) -->
-        <div id="u461" class="ax_default line">
+        <!-- Unnamed (Placeholder) -->
+        <div id="u461" class="ax_default placeholder">
           <img id="u461_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
+        <!-- Unnamed (Horizontal Line) -->
+        <div id="u462" class="ax_default line">
+          <img id="u462_img" class="img " src="images/编辑精选/u445.png"/>
+        </div>
+
         <!-- Unnamed (Rectangle) -->
-        <div id="u462" class="ax_default label">
-          <div id="u462_div" class=""></div>
-          <div id="u462_text" class="text ">
+        <div id="u463" class="ax_default label">
+          <div id="u463_div" class=""></div>
+          <div id="u463_text" class="text ">
             <p><span>推荐主题的标题</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Image) -->
-        <div id="u463" class="ax_default image">
-          <img id="u463_img" class="img " src="images/编辑精选/u447.png"/>
-        </div>
-
-        <!-- Unnamed (Placeholder) -->
-        <div id="u464" class="ax_default placeholder">
-          <img id="u464_img" class="img " src="images/编辑精选/u443.png"/>
+        <div id="u464" class="ax_default image">
+          <img id="u464_img" class="img " src="images/编辑精选/u448.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u465" class="ax_default placeholder">
-          <img id="u465_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u465_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u466" class="ax_default placeholder">
-          <img id="u466_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u466_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u467" class="ax_default placeholder">
-          <img id="u467_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u467_img" class="img " src="images/编辑精选/u444.png"/>
+        </div>
+
+        <!-- Unnamed (Placeholder) -->
+        <div id="u468" class="ax_default placeholder">
+          <img id="u468_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
       </div>
 
       <!-- Unnamed (Group) -->
-      <div id="u468" class="ax_default" data-left="31" data-top="95" data-width="306" data-height="212">
+      <div id="u469" class="ax_default" data-left="31" data-top="95" data-width="306" data-height="212">
 
         <!-- Unnamed (Rectangle) -->
-        <div id="u469" class="ax_default box_2">
-          <div id="u469_div" class=""></div>
+        <div id="u470" class="ax_default box_2">
+          <div id="u470_div" class=""></div>
         </div>
 
         <!-- Unnamed (Placeholder) -->
-        <div id="u470" class="ax_default placeholder">
-          <img id="u470_img" class="img " src="images/编辑精选/u443.png"/>
-        </div>
-
-        <!-- Unnamed (Horizontal Line) -->
-        <div id="u471" class="ax_default line">
+        <div id="u471" class="ax_default placeholder">
           <img id="u471_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
-        <!-- Unnamed (Rectangle) -->
-        <div id="u472" class="ax_default label">
-          <div id="u472_div" class=""></div>
-          <div id="u472_text" class="text ">
-            <p><span>Latest Stories</span></p>
-          </div>
+        <!-- Unnamed (Horizontal Line) -->
+        <div id="u472" class="ax_default line">
+          <img id="u472_img" class="img " src="images/编辑精选/u445.png"/>
         </div>
 
         <!-- Unnamed (Rectangle) -->
         <div id="u473" class="ax_default label">
           <div id="u473_div" class=""></div>
           <div id="u473_text" class="text ">
+            <p><span>Latest Stories</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Rectangle) -->
+        <div id="u474" class="ax_default label">
+          <div id="u474_div" class=""></div>
+          <div id="u474_text" class="text ">
             <p><span>推荐主题的标题</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Image) -->
-        <div id="u474" class="ax_default image">
-          <img id="u474_img" class="img " src="images/编辑精选/u447.png"/>
-        </div>
-
-        <!-- Unnamed (Placeholder) -->
-        <div id="u475" class="ax_default placeholder">
-          <img id="u475_img" class="img " src="images/编辑精选/u443.png"/>
+        <div id="u475" class="ax_default image">
+          <img id="u475_img" class="img " src="images/编辑精选/u448.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u476" class="ax_default placeholder">
-          <img id="u476_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u476_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u477" class="ax_default placeholder">
-          <img id="u477_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u477_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u478" class="ax_default placeholder">
-          <img id="u478_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u478_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u479" class="ax_default placeholder">
-          <img id="u479_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u479_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
-        <!-- Unnamed (Horizontal Line) -->
-        <div id="u480" class="ax_default line">
+        <!-- Unnamed (Placeholder) -->
+        <div id="u480" class="ax_default placeholder">
           <img id="u480_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
+        <!-- Unnamed (Horizontal Line) -->
+        <div id="u481" class="ax_default line">
+          <img id="u481_img" class="img " src="images/编辑精选/u445.png"/>
+        </div>
+
         <!-- Unnamed (Rectangle) -->
-        <div id="u481" class="ax_default label">
-          <div id="u481_div" class=""></div>
-          <div id="u481_text" class="text ">
+        <div id="u482" class="ax_default label">
+          <div id="u482_div" class=""></div>
+          <div id="u482_text" class="text ">
             <p><span>推荐主题的标题</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Image) -->
-        <div id="u482" class="ax_default image">
-          <img id="u482_img" class="img " src="images/编辑精选/u447.png"/>
-        </div>
-
-        <!-- Unnamed (Placeholder) -->
-        <div id="u483" class="ax_default placeholder">
-          <img id="u483_img" class="img " src="images/编辑精选/u443.png"/>
+        <div id="u483" class="ax_default image">
+          <img id="u483_img" class="img " src="images/编辑精选/u448.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u484" class="ax_default placeholder">
-          <img id="u484_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u484_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u485" class="ax_default placeholder">
-          <img id="u485_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u485_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
 
         <!-- Unnamed (Placeholder) -->
         <div id="u486" class="ax_default placeholder">
-          <img id="u486_img" class="img " src="images/编辑精选/u443.png"/>
+          <img id="u486_img" class="img " src="images/编辑精选/u444.png"/>
+        </div>
+
+        <!-- Unnamed (Placeholder) -->
+        <div id="u487" class="ax_default placeholder">
+          <img id="u487_img" class="img " src="images/编辑精选/u444.png"/>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u487" class="ax_default image1">
-        <img id="u487_img" class="img " src="images/首页/u6.png"/>
+      <div id="u488" class="ax_default image1">
+        <img id="u488_img" class="img " src="images/首页/u6.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u488" class="ax_default box_2">
-        <div id="u488_div" class=""></div>
-      </div>
-
-      <!-- Unnamed (Image) -->
-      <div id="u489" class="ax_default image">
-        <img id="u489_img" class="img " src="images/排行榜/u147.png"/>
+      <div id="u489" class="ax_default box_2">
+        <div id="u489_div" class=""></div>
       </div>
 
       <!-- Unnamed (Image) -->
       <div id="u490" class="ax_default image">
-        <img id="u490_img" class="img " src="images/排行榜/u148.png"/>
+        <img id="u490_img" class="img " src="images/排行榜/u149.png"/>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u491" class="ax_default image">
+        <img id="u491_img" class="img " src="images/排行榜/u150.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u491" class="ax_default label">
-        <div id="u491_div" class=""></div>
-        <div id="u491_text" class="text ">
+      <div id="u492" class="ax_default label">
+        <div id="u492_div" class=""></div>
+        <div id="u492_text" class="text ">
           <p><span>类别</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Group) -->
-      <div id="u492" class="ax_default" data-left="24" data-top="25" data-width="320" data-height="22">
-
-        <!-- Unnamed (Image) -->
-        <div id="u493" class="ax_default image1">
-          <img id="u493_img" class="img " src="images/首页/u10.png"/>
-        </div>
+      <div id="u493" class="ax_default" data-left="24" data-top="25" data-width="320" data-height="22">
 
         <!-- Unnamed (Image) -->
         <div id="u494" class="ax_default image1">
-          <img id="u494_img" class="img " src="images/首页/u11.png"/>
+          <img id="u494_img" class="img " src="images/首页/u10.png"/>
+        </div>
+
+        <!-- Unnamed (Image) -->
+        <div id="u495" class="ax_default image1">
+          <img id="u495_img" class="img " src="images/首页/u11.png"/>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u495" class="ax_default box_1">
-        <div id="u495_div" class=""></div>
+      <div id="u496" class="ax_default box_1">
+        <div id="u496_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u496" class="ax_default label">
-        <div id="u496_div" class=""></div>
-        <div id="u496_text" class="text ">
+      <div id="u497" class="ax_default label">
+        <div id="u497_div" class=""></div>
+        <div id="u497_text" class="text ">
           <p><span>精选就像一个榜单</span></p><p><span>设置了若干主题，根据分类或者其他</span></p><p><span>定期根据分类内的应用质量等情况来选择推荐</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u498" class="ax_default label">
+        <div id="u498_div" class=""></div>
+        <div id="u498_text" class="text ">
+          <p><span>问题：UI不一致</span></p><p><span>内容模块有些是圆角</span></p><p><span>有些是直角</span></p><p><span>此处直角</span></p>
         </div>
       </div>
     </div>
